PropertyLoader.java moved to separate package; added package di; added package annotation for di; updated code for di pattern;